--- a/public/assets/exercise.html
+++ b/public/assets/exercise.html
@@ -81,8 +81,8 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="./js/api.js"></script>
-  <script src="./js/exercise.js"></script>
+  <script src="/assets/js/api.js"></script>
+  <script src="/assets/js/exercise.js"></script>
 </body>
 
 </html>
