--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -41,9 +41,9 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="./js/api.js"></script>
-  <script src="./js/workout.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="/assets/js/api.js"></script>
+  <script src="/assets/js/workout.js"></script>
+  <script src="/assest/js/index.js"></script>
 </body>
 
 </html>
