--- a/public/assets/stats.html
+++ b/public/assets/stats.html
@@ -37,7 +37,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="/api.js"></script>
-    <script src="/stats.js"></script>
+    <script src="/assest/js/api.js"></script>
+    <script src="/assests/js/stats.js"></script>
   </body>
 </html>
