adding changes in the html

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -43,7 +43,7 @@
   </div>
   <script src="/assets/js/api.js"></script>
   <script src="/assets/js/workout.js"></script>
-  <script src="/assest/js/index.js"></script>
+  <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
